--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "crypto": "^1.0.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "libsodium": "^0.7.6",
+    "sodium": "^3.0.2"
+  },
+  "devDependencies": {
+    "mocha": "^6.2.2"
   }
 }
